@@ -1,28 +1,43 @@
 \name{JDBC}
 \alias{JDBC}
+\alias{findDrivers}
 \title{
   JDBC engine
 }
 \description{
-  \code{JDBC} creates a new DBI driver that can be used to start JDBC connections.
+  \code{JDBC} creates a new DBI driver that can be used to start JDBC
+  connections.
+
+  \code{findDrivers} attempts to find and load all JDBC 4 drivers on the
+  class path.
 }
 \usage{
   JDBC (driverClass = "", classPath = "", identifier.quote = NA)
+  findDrivers(classPath = "", service = "java.sql.Driver", loader = NULL)
 }
 \arguments{
   \item{driverClass}{name of the Java class of the JDBC driver to
-    load. If empty, it is assumed that corresponding JDBC drivers were
-    loaded by other means.}
-  \item{classPath}{class path that needs to be appended in order to
-    load the desired JDBC driver. Usually it is the path to the JAR file
-    containing the driver.}
+    load or a one of Java driver instances from \code{findDrivers}.}
+  \item{classPath}{character vector, class path that needs to be
+    appended in order to load the desired JDBC driver. Usually it is the
+    path to the JAR file containing the driver and all necessary
+    dependencies. It can be a vector and all paths are expanded.}
   \item{identifier.quote}{character to use for quoting identifiers in
     automatically generated SQL statements or \code{NA} if the back-end
-    doesn't support quoted identifiers. See details section below.}    
+    doesn't support quoted identifiers. See details section below.}
+  \item{service}{string, name of the services class (for JDBC always
+    "java.sql.Driver")}
+  \item{loader}{Java class loader to use during the look-up or
+    \code{NULL} for the default one}  
 }
 \value{
-  Returns a \code{JDBCDriver} object that can be used in calls to
-  \code{\link[DBI]{dbConnect}}.
+  \code{JDBC} returns a \code{JDBCDriver} object that can be used in
+  calls to \code{\link[DBI]{dbConnect}}.
+
+  \code{findDrivers} returns a list of Java object references to
+  instances of JDBC drivers that were found. The list can be empty if no
+  drivers were found. Elements can be used as the \code{driverClass} in
+  calls to \code{JDBC}.
 }
 \details{
   \code{JDBC} function has two purposes. One is to initialize the Java VM
@@ -38,6 +53,16 @@
   to load the driver (for example the MySQL driver uses
   \code{com.mysql.jdbc.Driver}), this has to be specified in
   \code{driverClass}.
+
+  Modern drivers (those supporting JDBC 4) may use Java Service Provider
+  interface for discovery and those can be found using the
+  \code{findDrivers()} function which returns a list of drivers. You
+  can pass any of the returned elements as \code{classDriver}. Note that
+  the discovery is dynamic, so you can use
+  \code{rJava::.jaddClassPath(...)} to add new locations in which Java
+  will look for driver JAR files. However, only drivers providing JSP
+  metadata in their JAR files can be found. JSP was introduced in Java
+  1.6 so \code{findDrivers()} only works on Java 1.6 or higher.
 
   Due to the fact that JDBC can talk to a wide variety of databases, the
   SQL dialect understood by the database is not known in
